[project]
name = "isotope-pattern-service"
version = "0.1.0"
description = "A REST API service to compute the isotope pattern of a given molecular formula"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Kirill S Smirnov", email = "kirill.smirnov.mail@gmail.com" }
]
keywords = ["isotope pattern", "mass spectrometry", "molecular formula", "rest api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "isotope-pattern-lib>=1.0.0",
]

[dependency-groups]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["isotope_pattern_service"]
